# Interpretator-6502

./: .gdbinit  .gitignore  2048.6502  CMakeCache.txt  CMakeLists.txt  Makefile  README-ru.md  README.md  cmake_install.cmake  colors.6502  int6502  new2048.6502
include/: draw.h  drawer.h  error_codes.h  executor.h  insn.h  scroll.h  translator.h  util.h
src/: draw.cpp  drawer.cpp  executor.cpp  insn.cpp  main.cpp  scroll.cpp  translator.cpp
